@@ -26,6 +26,7 @@ mcset c cmd_list         "Command restricted to usage in command lists"
 mcset c opt_list         "Command restricted to usage in option lists"
 mcset c tkoption_list    "Command restricted to usage in tkoption lists"
 mcset c depr_strong      "Deprecated command \"%s\".\n\tPlease consider appropriate semantic markup or \[emph\] instead."
+mcset c sectambig        "(Sub)Section title \"%s\" causes ambiguous section references."
 
 # TOC messages
 
